# hybridops-core

./: .ansible-lint  .gitignore  CHANGELOG  CONTRIBUTING.md  HA_db_note.md  LICENSE  README  README.md  anti-drift-centralization-cost-guard-v1.md  anti-drift-note  anti-drift-pre-first-publish-checklist-v1.md  install-windows.cmd  install.sh  open-hybridops.cmd  pyproject.toml
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  improvement.yml  question.yml
.github/workflows/: ci.yml  quality.yml  release.yml
.internal/notes/: academy-moodle-storage-dr-todo.md  platform-onprem-nfs-appliance-contract.md
blueprints/: README.md
hyops/: __init__.py  cli.py
hyops/assets/: __init__.py
hyops/blueprint/: __init__.py  command.py  common.py  constants.py  contracts.py  planner.py  schema.py
hyops/commands/: _apply_execute.py  _apply_helpers.py  apply.py  notes.md  rebuild.py
hyops/drivers/: README.md  plugin-model.md  plugins.py  registry.py
hyops/init/: __init__.py  command.py  helpers.py  shared_args.py  status.py
hyops/inventory/: __init__.py  command.py
hyops/module/: __init__.py  command.py  evidence.py
hyops/preflight/: __init__.py  checks.py  command.py
hyops/runner/: __init__.py  command.py
modules/: README.md
pkg/: README.md  build_macos_pkg.sh  build_release.sh  manifest.yml  prune.yml  support-policy.json  verify_release.sh
runbooks/: RB-020-scenario-operations.md  RB-030-module-lifecycle.md  RB-040-privilege-model.md  runtime-netbox-export-contract.md
(+1097 files in other folders)
